ChatBar: fixed sluggishness on mobile when opening

--- a/public/styles.css
+++ b/public/styles.css
@@ -168,7 +168,7 @@
 	padding: 15px 15px 0;
 	overflow: hidden auto;
 	scroll-behavior: smooth;
-	transition: resize 0.3s ease;
+    transition: all 0.3s ease;
 	--webkit-overflow: hidden auto;
 }
 body.mobile #main-content {
